# mlconfound

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  pypi-publish.yml  python-app.yml
data_in/: README.md
data_out/: README.md  bbb_full_normal_cat_c=True_cat_yyhat=True_delta_yc=1.0_delta_yhat=1.0_epsilon_yc=0.0_epsilon_yhat=0.0_mode='full'_n_jobs=-1_out_file=None_out_prefix='bbb_full_normal'_random_seed=4242.csv  bbc_full_normal_cat_c=True_cat_yyhat=True_delta_yc=1.0_delta_yhat=1.0_epsilon_yc=0.0_epsilon_yhat=0.0_mode='full'_n_jobs=-1_out_file=None_out_prefix='bbc_full_normal'_random_seed=4242.csv  ccb_full_normal_cat_c=True_cat_yyhat=False_delta_yc=1.0_delta_yhat=1.0_epsilon_yc=0.0_epsilon_yhat=0.0_mode='full'_n_jobs=-1_out_file=None_out_prefix='ccb_full_normal'_random_seed=4242.csv  test_cat_c=True_cat_yyhat=False_delta_yc=1.0_delta_yhat=1.0_epsilon_yc=0.0_epsilon_yhat=0.0_mode='partial'_n_jobs=-1_out_file=None_out_prefix='test'_random_seed=4242.csv
data_out/bckp/: validation_cat_c=False_cat_yyhat=False_delta_yc=1.0_delta_yhat=1.0_epsilon_yc=0.0_epsilon_yhat=0.0_mode=1_n_jobs=-1_out_file=None_out_prefix='validation'_random_seed=4242.csv
docs/: about.md  conf.py  docs.md  index.rst  install.md  quickstart.ipynb  quickstart.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: about.doctree  developer_docs.doctree  docs.doctree  environment.pickle  index.doctree  mlconfound-plot.doctree  mlconfound-stats.doctree
docs/_build/html/: .buildinfo  about.html  developer_docs.html  docs.html  genindex.html  index.html  mlconfound-plot.html  mlconfound-stats.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: about.md.txt  developer_docs.md.txt  docs.md.txt  index.rst.txt  mlconfound-plot.md.txt
mlconfound/: __init__.py  _utils.py  _version.py  plot.py  simulate.py  stats.py
notebooks/: CPT.ipynb  analysis_abide.ipynb  analysis_hcp.ipynb  deleteme.ipynb  example.dot  example.tex  mcmc_test.ipynb  plot_simulation_results_partial.ipynb  quickstart.ipynb  simulation_H0.ipynb  tutorial.ipynb
notebooks/.ipynb_checkpoints/: mcmc_test-checkpoint.ipynb  simulation_H0-checkpoint.ipynb  tutorial-checkpoint.ipynb
validation/: run_full.sh  run_partial.py  run_partial.sh  run_partial_pearson.sh  run_partial_spearman.sh  run_simulation.sh  simulation.py
(+2 files in other folders)
