[tool.poetry]
name = "mlconfound"
version = "0.9.0"
description = "Tools for analyzing and quantifying effects of counfounder variables on machine learning model predictions."
authors = ["Tamas Spisak <tamas.spisak@uk-essen.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

