[tool.poetry]
name = "mlconfound"
version = "0.9.2"
description = "Tools for analyzing and quantifying effects of counfounder variables on machine learning model predictions."
authors = ["Tamas Spisak <tamas.spisak@uni-due.de>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pni-lab/mlconfound"
homepage = "https://mlconfound.readthedocs.io"
documentation = "https://mlconfound.readthedocs.io"
readme = 'README.md'
keywords = [
    "machine learning",
    "predictive modelling",
    "confounder test",
    "conditional independence",
    "conditional permutation"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
joblib = "^1.0.1"
tqdm = "^4.62.0"
numpy = "^1.21.1"
pandas = "^1.3.1"
scipy = "^1.7.1"
statsmodels = "^0.12.2"
seaborn = "^0.11.1"
graphviz = "^0.17"
dot2tex = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

