[metadata]
name = mlconfound
author = Tamas Spisak
author_email = tamas.sisak@uk-essen.de
description = Tools for analyzing and quantifying effects of counfounder variables on machine learning model predictions.
url = https://github.com/pni-lab/mlconfound
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
packages = mlconfound
install_requires =
    joblib>=1.0
    tqdm>=4.61
    numpy>=1.18
    scipy>=1.4
    statsmodels>=0.11
    pandas>=1.0
    matplotlib>=3.2
    seaborn>=0.11.1
    graphviz>=0.17
    dot2tex>=2.11
